docker/builds/py1/aws/KUBERNETES/UTILITYPODS/EALENECHO-SERVER.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
  labels:
    app: echo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server:latest
          ports:
            - containerPort: 8080
              name: alt-web

---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
  labels:
    app: echo-server
spec:
  selector:
    app: echo-server
  ports:
    - port: 8080
      protocol: TCP
      targetPort: alt-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
  name: echo-server
  namespace: echo-server
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /echo-server
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 8080
  # Optional: If you want to add TLS configuration
  # tls:
  # - hosts:
  #   - your-hostname.example.com
